--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -13,4 +13,5 @@ parserOptions:
 
 rules:
   no-console: 0
-  import/extensions: 0 # FIXME: remove when rule will be adjusted for new nodejs version
+  import/extensions: 0
+  no-await-in-loop: 0
